# zew-plugin-libloading

./: .env  .gitignore  Cargo.toml  README.md  makefile
.cargo/: config.toml
core/api/: Cargo.toml
core/api/src/: lib.rs
core/api/src/handler/: plugin.rs
core/api/src/middleware/: cather_all.rs  cors_middleware.rs  jwt_middleware.rs  mod.rs
core/api/src/router/: mod.rs  plugin.rs  router.rs
core/common/: Cargo.toml
core/common/src/: config.rs  lib.rs  log.rs
core/common/src/dto/: login_dto.rs  mod.rs  user_dto.rs
core/common/src/utils/: bcrypt.rs  env_conversion.rs  jwt.rs  mod.rs
core/plugin/: Cargo.toml
core/plugin/src/: binding.rs  collect.rs  lib.rs  plugin_manager.rs
interface/: Cargo.toml
interface/src/: error.rs  lib.rs  plugin.rs  writer.rs
plugin/example/: Cargo.toml
plugin/example/src/: handler.rs  lib.rs  plugin.rs
src/: main.rs
