[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
salvo = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
time = { workspace = true }
interface = { path = "../../interface" }
